--- a/q/274775.html
+++ b/q/274775.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>249</td><td>VBScript</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
-<tr d-ix="1"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
-<tr d-ix="2"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
-<tr d-ix="3"><td>135</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
-<tr d-ix="4"><td>084</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
+<tr d-ix="0"><td>065</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
+<tr d-ix="1"><td>249</td><td>VBScript</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
+<tr d-ix="2"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
+<tr d-ix="3"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="4"><td>135</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
 <tr d-ix="5"><td>210</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
 <tr d-ix="6"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
 <tr d-ix="7"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
@@ -43,7 +43,17 @@
 <tr d-ix="14"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
 <tr d-ix="15"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>VBScript, <s>263</s> 249 bytes</h2>
+<div id="pu0" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, <sup><s>84</s></sup> 65 bytes</h1>
+
+<pre class="lang-lua prettyprint-override"><code>day={length=&quot;24 hours&quot;}os.
+day = &quot;Monday&quot;
+x = day.length
+print(x)
+</code></pre>
+<p><a href="https://tio.run/##yylN/P8/JbHStjonNS@9JMNWychEISO/tKhYqTa/WI8LKKVgq6Dkm58HZClxVQA5QIYeRDFXQVFmXolGheb//wA" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
+<p>-19 thanks to Daniel Schepler</p>
+</div>
+<div id="pu1" class="pu"><h2>VBScript, <s>263</s> 249 bytes</h2>
 <pre><code>class o
 public length
 property let day(x)
@@ -65,14 +75,14 @@ wscript.echo x.x
 </code></pre>
 <p><code>day</code> is a date function in VBScript. <code>print</code> is apparently also a function, but I don't know what it does. Wrapping everything in a class allows me to declare local properties to override them, so the only statement that actually achieves anything is <code>x = day.length</code>, which reads the <code>me.length</code> set earlier and returns it as the result of <code>x.x</code>, which we echo at the end of the script.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>8î`24 ÊÀsday = &quot;Monday&quot;
 x = day.length
 print(x)
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=OO5gMjQgysBzZGF5ID0gIk1vbmRheSIKeCA9IGRheS5sZW5ndGgKcHJpbnQoeCk" rel="nofollow noreferrer">Test it</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
 <pre><code>length=&quot;\r24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -84,7 +94,7 @@ print(x)
 <p>The dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24 hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
 <p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> 135 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> 135 bytes</h1>
 <p><em>Thanks to G B for −33 bytes.</em></p>
 <pre class="lang-cpp prettyprint-override"><code>#include&lt;cstdio&gt;
 #define print(Z)puts(&quot;24 hours&quot;);}
@@ -94,16 +104,6 @@ x = day.length;
 print(x);
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m702uSCntBiE49OTkxcsWFpakqZrcbNdOTMvOac0JdUmubgkJTPfjks5JTUtMy9VoaAoM69EI0qzoLSkWEPJyEQhI7-0qFhJ07qWq7ikqDS5RMGx2lErJzUvvSTD2lEjOSOxSEuzurbWOjcxM09DEyhXocOVklipYKug5JufB2QpWXNVAHlAlh5UGxfEkgpNa4hzoK6CuQ4A" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 84 bytes</h1>
-
-<pre class="lang-lua prettyprint-override"><code>getmetatable''.__index=load&quot;return'24 hours'&quot;
-day = &quot;Monday&quot;
-x = day.length
-print(x)
-</code></pre>
-<p><a href="https://tio.run/##DccxDoAgDADAnVeQLujiYFx5gm8gNTRAgsVgSfD1yHaXG44RSG4SFLwyGbM5l9hTt7mgh0rSKpv90LG0@hpQHj9tNZyFp0D1mYktEweJ6qmJZenrGD8" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
-<p>The first line simply overrides string indexing to return <code>'24 hours'</code>.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, 210 bytes</h1>
 <pre><code>class C {
