--- a/q/274829.html
+++ b/q/274829.html
@@ -26,13 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>040</td><td>Python</td><td>240809T051137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274836#274836">xnor</a></td></tr>
-<tr d-ix="1"><td>048</td><td>Python</td><td>240809T044903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274835#274835">Albert.L</a></td></tr>
-<tr d-ix="2"><td>043</td><td>Funge98</td><td>240809T042800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274834#274834">Alt Shif</a></td></tr>
-<tr d-ix="3"><td>9375</td><td>Vyxal</td><td>240809T012419Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274831#274831">lyxal</a></td></tr>
-<tr d-ix="4"><td>028</td><td>JavaScript Node.js</td><td>240809T011815Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274830#274830">l4m2</a></td></tr>
+<tr d-ix="0"><td>015</td><td>Retina 0.8.2</td><td>240809T062355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274837#274837">Neil</a></td></tr>
+<tr d-ix="1"><td>040</td><td>Python</td><td>240809T051137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274836#274836">xnor</a></td></tr>
+<tr d-ix="2"><td>048</td><td>Python</td><td>240809T044903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274835#274835">Albert.L</a></td></tr>
+<tr d-ix="3"><td>043</td><td>Funge98</td><td>240809T042800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274834#274834">Alt Shif</a></td></tr>
+<tr d-ix="4"><td>9375</td><td>Vyxal</td><td>240809T012419Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274831#274831">lyxal</a></td></tr>
+<tr d-ix="5"><td>028</td><td>JavaScript Node.js</td><td>240809T011815Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274830#274830">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 40 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 15 bytes</h1>
+<pre><code>O^`.#?
+1`(.)#\1
+</code></pre>
+<p><a href="https://tio.run/##jVJBDsIgELzzCpKqaZOmSR@gPsEHVE0BKfGgMVrjxb9XqGzdBYweyLbMMLPscNX98SyGed6e7j3Pq4LN6owJedPn/nm56rE2@@0j27Fhs2@rbM3q1vKybT0MzY4vV/zNZs1C0F@nGGzJki9kzPpse0uey8LTRzyBwblvuLLYIbZS/kgACdgm8KR4AEfH@4dDtHwVlG9p4xFMd0skZKFrY6v7VrR7DMMlFZVRYCW9hLPS8Xw6t@1XYk4dgvQ04clF4wsZ7waukFaXeCYWCukQcBeNTYJLcsXBwgInSv0ohwH@Xb/omCCWn5XqGBwZebsoBBeIia8MKeM2J5l4oCVXODk8MOOjSTRoKaZ4AQ" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Takes input as a list of just the letters with the mutable references marked by a trailing <code>#</code> but link is to test suite that converts the test cases to this format for you. Outputs <code>0</code> for absent and <code>1</code> for present (if inconsistent larger numbers are allowed then the <code>1</code> can be removed to save two bytes). Explanation:</p>
+<pre><code>O^`.#?
+</code></pre>
+<p>Sort all of the references in reverse order, so the mutable references for <code>g</code> comes first and the immutable references for <code>a</code> comes last.</p>
+<pre><code>1`(.)#\1
+</code></pre>
+<p>Check for a mutable reference followed by another reference to the same variable.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 40 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda l:any(l.count(n|1)&gt;n%2for n in l)
 </code></pre>
@@ -44,20 +57,20 @@
 <pre class="lang-python prettyprint-override"><code>lambda l:any(b&lt;l.count((k,1))for k,b in l)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 48 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 48 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda L,*k:all(m*k!=(k:=l)for l,m in sorted(L))
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=rVW9boMwGNw6IPUd3Ex25FYZKySmSp0Ys9EMBts0wvyIkEh9li6Rqvad2qdpCWnA-DMBJePp_N13nA94_yreqtc8239I7-VzW8n7x--FYmnIGfLpPHGZUjidJ3ceTlxPEZmXSNEUrTO0yctKcOwTcpx7qsqtoJKpjUAeWtbguQZOPeTXI2LHFM4LkeEFeSgF45gQ10FFuc4qLFup_c_NbeAEK-oEeMZmFB1ESYvrTUcYnmiKuqhhI43lAHuQ-ic7uvpk3D2pUxHgDzJkTnINiZ6O7K4UlqOAcWY3rpsZMqojObTh2mhciua1mcFoCca9BSEcjK1UvcZpk9ZoOGi0V2OzCedOwoBNcmJP_kzxgbeg7autogJeDzxfbCQ_vrAnEQlsGF9DLdEpfTWv4mLQiMf9hK4Dpn6vNIta4NGQ5ECmhi-A-pNcNb-FXw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=rVW9boMwGNw6IPUd3Ex25FYZKySmSp0Ys9EMBts0wvyIkEh9li6Rqvad2qdpCWnA-DMBJePp_N13nA94_yreqtc8239I7-VzW8n7x--FYmnIGfLpPHGZUjidJ3ceTlxPEZmXSNEUrTO0yctKcOwTcpx7qsqtoJKpjUAeWtbguQZOPeTXI2LHFM4LkeEFeSgF45gQ10FFuc4qLFup_c_NbeAEK-oEeMZmFB1ESYvrTUcYnmiKuqhhI43lAHuQ-ic7uvpk3D2pUxHgDzJkTnINiZ6O7K4UlqOAcWY3rpsZMqojObTh2mhciua1mcFoCca9BSEcjK1UvcZpk9ZoOGi0V2OzCedOwoBNcmJP_kzxgbeg7autogJeDzxfbCQ_vrAnEQlsGF9DLdEpfTWv4mLQiMf9hK4Dpn6vNIta4NGQ5ECmhi-A-pNcNb-FXw" rel="noreferrer">Attempt This Online!</a></p>
 <p>Takes a list of pairs (name, is_mutable).</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 43 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 43 bytes</h1>
 <pre><code>#;~:a`j@4k:0g1+\0p1g&amp;+\1p0g'!`\1g' `*2j@._;
 </code></pre>
 <p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//9Xtq6zSkzIcjDJtjJIN9SOMSgwTFfTjjEsMEhXV0yIMUxXV0jQMspy0Iu3/v8/0YAr0ZALSKYbcqWDSS4A" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Takes input as pairs of letters (a-g) and binary digits, such as <code>a1</code>, each of which must be followed by a newline. These pairs must be followed by another newline. The digits are <code>1</code> if a reference is mutable, and <code>0</code> if it is not.</p>
 <p>Outputs <code>0 </code> if mutable aliasing occurs, and nothing otherwise.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 75 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 9.375 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 75 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 9.375 bytes</h1>
 <pre><code>⁽hġƛvtÞżU₃;A
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiXFwoXFxbVlxcKVxcXVZgdHJ1ZWAxVmBmYWxzZWAwVkUiLCLigb1oxKHGm3Z0w57FvFXigoM7QSIsIiIsIlsoXCJhXCIsIHRydWUpLCAoXCJkXCIsIHRydWUpLCAoXCJkXCIsIHRydWUpLCAoXCJhXCIsIHRydWUpXSJd" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -81,7 +94,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 28 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 28 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;/t (.).*\1.*\1/.test(x+x)
 </code></pre>
