--- a/q/274829.html
+++ b/q/274829.html
@@ -26,15 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Charcoal</td><td>240809T063035Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274838#274838">Neil</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Retina 0.8.2</td><td>240809T062355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274837#274837">Neil</a></td></tr>
-<tr d-ix="2"><td>040</td><td>Python</td><td>240809T051137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274836#274836">xnor</a></td></tr>
-<tr d-ix="3"><td>048</td><td>Python</td><td>240809T044903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274835#274835">Albert.L</a></td></tr>
-<tr d-ix="4"><td>043</td><td>Funge98</td><td>240809T042800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274834#274834">Alt Shif</a></td></tr>
-<tr d-ix="5"><td>9375</td><td>Vyxal</td><td>240809T012419Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274831#274831">lyxal</a></td></tr>
-<tr d-ix="6"><td>028</td><td>JavaScript Node.js</td><td>240809T011815Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274830#274830">l4m2</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Nekomata + e</td><td>240809T064132Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274839#274839">alephalp</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Charcoal</td><td>240809T063035Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274838#274838">Neil</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Retina 0.8.2</td><td>240809T062355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274837#274837">Neil</a></td></tr>
+<tr d-ix="3"><td>040</td><td>Python</td><td>240809T051137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274836#274836">xnor</a></td></tr>
+<tr d-ix="4"><td>048</td><td>Python</td><td>240809T044903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274835#274835">Albert.L</a></td></tr>
+<tr d-ix="5"><td>043</td><td>Funge98</td><td>240809T042800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274834#274834">Alt Shif</a></td></tr>
+<tr d-ix="6"><td>9375</td><td>Vyxal</td><td>240809T012419Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274831#274831">lyxal</a></td></tr>
+<tr d-ix="7"><td>028</td><td>JavaScript Node.js</td><td>240809T011815Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274830#274830">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 10 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 5 bytes</h1>
+<pre><code>ĕ∏Hᵗf
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FquOTH3U0e_xcOv0tCXFScnFUOEFt1gyomO5oqOVEoEaDGLhTEMIMwksqqMAY4EFk-GCKaiChnBBQ3SV6XBphFgyqpXI9qAqTIGzUhFa0uAmpqJJozkiEYsjELZgsxnBSsNmDLksvD5FDjtUryA8mo4wJgnNK1hiyxCbSgzPpChhibdEFEGsIYruXgQrkbA1GKGCK6EgJxl4rKPHdSqa2WhuTMcS4rhi3RAe4hjRhYtliFcWwzXkssDGpKN4ihwWEbkNYTMiRJJx5QN036PahywWCylxAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Take input as a list of <code>[variable, is_mutable]</code> pairs, where <code>variable</code> is a string and <code>is_mutable</code> is an integer (<code>0</code> or <code>1</code>).</p>
+<p>Output <code>True</code> for <code>present</code> and <code>False</code> for <code>absent</code>.</p>
+<pre><code>ĕ∏Hᵗf
+ĕ       Take one element out from the input
+ ∏      Product; strings are converted to their code points
+  H     Convert the code points back to a string
+        After these two steps, [v,1] becomes v and [v,0] becomes a null character
+   ᵗf   Check that the rest of the input contains this string
+</code></pre>
+<p><code>-e</code> checks if there is a solution.</p>
+<p>Let's take <code>[[&quot;f&quot;,0],[&quot;e&quot;,0],[&quot;e&quot;,1],[&quot;d&quot;,0]]</code> as an example. In the first step (<code>ĕ</code>), we can take out <code>[&quot;e&quot;,1]</code>, which becomes <code>&quot;e&quot;</code> after applying <code>∏H</code>. The rest of the input is <code>[[&quot;f&quot;,0],[&quot;e&quot;,0],[&quot;d&quot;,0]]</code>, which contains <code>&quot;e&quot;</code>. Therefore, the output is <code>True</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 10 bytes</h1>
 <pre><code>⊙θ›№θ↥ι№αι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxr1KjUEfBvSg1sSS1SMM5vxQoCBQILShILUpOLE7VyNTU1FGAiCfqKAB5mprW//@7OTo7urj@1y3LAQA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input as a string of letters where lowercase letters are immutable references and uppercase letters are mutable references and outputs a Charcoal boolean, i.e. <code>-</code> for present, nothing for absent. Explanation: Port of @xnor's Python answer.</p>
@@ -51,7 +68,7 @@
             Implicitly print
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 15 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 15 bytes</h1>
 <pre><code>O^`.#?
 1`(.)#\1
 </code></pre>
@@ -63,7 +80,7 @@
 </code></pre>
 <p>Check for a mutable reference followed by another reference to the same variable.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 40 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 40 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda l:any(l.count(n|1)&gt;n%2for n in l)
 </code></pre>
@@ -75,20 +92,20 @@
 <pre class="lang-python prettyprint-override"><code>lambda l:any(b&lt;l.count((k,1))for k,b in l)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 48 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 48 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda L,*k:all(m*k!=(k:=l)for l,m in sorted(L))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=rVW9boMwGNw6IPUd3Ex25FYZKySmSp0Ys9EMBts0wvyIkEh9li6Rqvad2qdpCWnA-DMBJePp_N13nA94_yreqtc8239I7-VzW8n7x--FYmnIGfLpPHGZUjidJ3ceTlxPEZmXSNEUrTO0yctKcOwTcpx7qsqtoJKpjUAeWtbguQZOPeTXI2LHFM4LkeEFeSgF45gQ10FFuc4qLFup_c_NbeAEK-oEeMZmFB1ESYvrTUcYnmiKuqhhI43lAHuQ-ic7uvpk3D2pUxHgDzJkTnINiZ6O7K4UlqOAcWY3rpsZMqojObTh2mhciua1mcFoCca9BSEcjK1UvcZpk9ZoOGi0V2OzCedOwoBNcmJP_kzxgbeg7autogJeDzxfbCQ_vrAnEQlsGF9DLdEpfTWv4mLQiMf9hK4Dpn6vNIta4NGQ5ECmhi-A-pNcNb-FXw" rel="noreferrer">Attempt This Online!</a></p>
 <p>Takes a list of pairs (name, is_mutable).</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 43 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 43 bytes</h1>
 <pre><code>#;~:a`j@4k:0g1+\0p1g&amp;+\1p0g'!`\1g' `*2j@._;
 </code></pre>
 <p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//9Xtq6zSkzIcjDJtjJIN9SOMSgwTFfTjjEsMEhXV0yIMUxXV0jQMspy0Iu3/v8/0YAr0ZALSKYbcqWDSS4A" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Takes input as pairs of letters (a-g) and binary digits, such as <code>a1</code>, each of which must be followed by a newline. These pairs must be followed by another newline. The digits are <code>1</code> if a reference is mutable, and <code>0</code> if it is not.</p>
 <p>Outputs <code>0 </code> if mutable aliasing occurs, and nothing otherwise.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 75 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 9.375 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 75 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 9.375 bytes</h1>
 <pre><code>⁽hġƛvtÞżU₃;A
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiXFwoXFxbVlxcKVxcXVZgdHJ1ZWAxVmBmYWxzZWAwVkUiLCLigb1oxKHGm3Z0w57FvFXigoM7QSIsIiIsIlsoXCJhXCIsIHRydWUpLCAoXCJkXCIsIHRydWUpLCAoXCJkXCIsIHRydWUpLCAoXCJhXCIsIHRydWUpXSJd" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -112,7 +129,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 28 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 28 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;/t (.).*\1.*\1/.test(x+x)
 </code></pre>
