--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240809T065252Z
+"   /golfscore                                      20240809T074029Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/176010.html">Strange Addition                                : 0176010</a>
 <a href="q/274829.html">Is there mutable aliasing in this list of variab: 0274829</a>
 <a href="q/274775.html">Make a GCSE students error work                 : 0274775</a>
 <a href="q/222775.html">Sr. 4Der says make this shape! (Episode 1)      : 0222775</a>
