--- a/q/274775.html
+++ b/q/274775.html
@@ -26,25 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>062</td><td>Lua</td><td>240809T085127Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274844#274844">ouflak</a></td></tr>
-<tr d-ix="1"><td>198</td><td>Progress Openedge ABL</td><td>240809T081903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274843#274843">Crelda</a></td></tr>
-<tr d-ix="2"><td>270</td><td>Haskell</td><td>240809T074754Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274841#274841">CocoaBea</a></td></tr>
-<tr d-ix="3"><td>134</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
-<tr d-ix="4"><td>065</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
-<tr d-ix="5"><td>249</td><td>VBScript</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
-<tr d-ix="6"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
-<tr d-ix="7"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
-<tr d-ix="8"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
-<tr d-ix="9"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
-<tr d-ix="10"><td>068</td><td>Ruby</td><td>240808T075112Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274796#274796">G B</a></td></tr>
-<tr d-ix="11"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
-<tr d-ix="12"><td>060</td><td>R</td><td>240808T062453Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274789#274789">pajonk</a></td></tr>
-<tr d-ix="13"><td>124</td><td>Raku Perl 6 rakudo</td><td>240808T051046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274784#274784">bb94</a></td></tr>
-<tr d-ix="14"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
-<tr d-ix="15"><td>071</td><td>JavaScript Node.js</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
-<tr d-ix="16"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
+<tr d-ix="0"><td>058</td><td>PARI/GP</td><td>240809T091007Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274845#274845">alephalp</a></td></tr>
+<tr d-ix="1"><td>062</td><td>Lua</td><td>240809T085127Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274844#274844">ouflak</a></td></tr>
+<tr d-ix="2"><td>198</td><td>Progress Openedge ABL</td><td>240809T081903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274843#274843">Crelda</a></td></tr>
+<tr d-ix="3"><td>270</td><td>Haskell</td><td>240809T074754Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274841#274841">CocoaBea</a></td></tr>
+<tr d-ix="4"><td>134</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
+<tr d-ix="5"><td>065</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
+<tr d-ix="6"><td>249</td><td>VBScript</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
+<tr d-ix="7"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
+<tr d-ix="8"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="9"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
+<tr d-ix="10"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
+<tr d-ix="11"><td>068</td><td>Ruby</td><td>240808T075112Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274796#274796">G B</a></td></tr>
+<tr d-ix="12"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
+<tr d-ix="13"><td>060</td><td>R</td><td>240808T062453Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274789#274789">pajonk</a></td></tr>
+<tr d-ix="14"><td>124</td><td>Raku Perl 6 rakudo</td><td>240808T051046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274784#274784">bb94</a></td></tr>
+<tr d-ix="15"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
+<tr d-ix="16"><td>071</td><td>JavaScript Node.js</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
+<tr d-ix="17"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 62 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 58 bytes</h1>
+<pre><code>a.length=&quot;24 hours&quot;
+day = &quot;Monday&quot;
+x = day.length
+print(x)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWN60S9XJS89JLMmyVjEwUMvJLi4qVuFISKxVsFZR88_OALCWuCiAHyIAq5Cooyswr0ajQhJgANQhmIAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>PARI/GP's member function syntax is a bit weird. When we define a member function <code>a.length=&quot;24 hours&quot;</code>, we actually define a new function <code>_.length = (a) -&gt; &quot;24 hours&quot;</code>. This function is associated with <code>_.length</code> instead of <code>a</code>, so we can call it from any object, not just <code>a</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 62 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>print=print(&quot;24 hours&quot;)
 day = &quot;Monday&quot;
@@ -53,7 +63,7 @@ print(x)
 </code></pre>
 <p><a href="https://tio.run/##yylN/P@/oCgzr8QWTGooGZkoZOSXFhUraXKlJFYq2Coo@ebnAVlKXBVADpChl5Oal16SwQVRX6H5/z8A" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.progress.com/openedge/features/abl" rel="nofollow noreferrer">Progress Openedge ABL</a>, 198 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.progress.com/openedge/features/abl" rel="nofollow noreferrer">Progress Openedge ABL</a>, 198 bytes</h1>
 <pre><code>def var day as char.
 def var x as char.
 def temp-table day
@@ -70,7 +80,7 @@ print(x).
 <p><a href="https://abldojo.services.progress.com/?shareId=66b5c59c20add51d93a68a5a" rel="nofollow noreferrer">Try It</a><br />
 You may need to switch the dojo to run on v12.2.12 to avoid an error with the site</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 270 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 270 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>{-# LANGUAGE CPP #-}
 {-# LANGUAGE OverloadedRecordDot #-}
 {-# LANGUAGE DataKinds #-}
@@ -84,7 +94,7 @@ main=let
 </code></pre>
 <p><a href="https://play.haskell.org/saved/xidFgOH5" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> <s>135</s> 134 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> <s>135</s> 134 bytes</h1>
 <p><em>Thanks to G B for −33 bytes.</em></p>
 <pre class="lang-cpp prettyprint-override"><code>#include&lt;cstdio&gt;
 #define print(Z)puts(&quot;24 hours&quot;);}
@@ -95,7 +105,7 @@ print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m702uSCntBiE49OTkxcsWFpakqZrcbNNOTMvOac0JdUmubgkJTPfjks5JTUtMy9VoaAoM69EI0qzoLSkWEPJyEQhI7-0qFhJ07qWq7ikqDS5RMGx2lErJzUvvSTD2lEjOSOxSEuzurbWOjcxM09DEyhXocOVklipYKug5JufB2QpWXNVAHlAlh5UGxfEkgpNiGugjoI5DgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, <sup><s>84</s></sup> 65 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, <sup><s>84</s></sup> 65 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>day={length=&quot;24 hours&quot;}os.
 day = &quot;Monday&quot;
@@ -105,7 +115,7 @@ print(x)
 <p><a href="https://tio.run/##yylN/P8/JbHStjonNS@9JMNWychEISO/tKhYqTa/WI8LKKVgq6Dkm58HZClxVQA5QIYeRDFXQVFmXolGheb//wA" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 <p>-19 thanks to Daniel Schepler</p>
 </div>
-<div id="pu5" class="pu"><h2>VBScript, <s>263</s> 249 bytes</h2>
+<div id="pu6" class="pu"><h2>VBScript, <s>263</s> 249 bytes</h2>
 <pre><code>class o
 public length
 property let day(x)
@@ -127,14 +137,14 @@ wscript.echo x.x
 </code></pre>
 <p><code>day</code> is a date function in VBScript. <code>print</code> is apparently also a function, but I don't know what it does. Wrapping everything in a class allows me to declare local properties to override them, so the only statement that actually achieves anything is <code>x = day.length</code>, which reads the <code>me.length</code> set earlier and returns it as the result of <code>x.x</code>, which we echo at the end of the script.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>8î`24 ÊÀsday = &quot;Monday&quot;
 x = day.length
 print(x)
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=OO5gMjQgysBzZGF5ID0gIk1vbmRheSIKeCA9IGRheS5sZW5ndGgKcHJpbnQoeCk" rel="nofollow noreferrer">Test it</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
 <pre><code>length=&quot;\r24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -146,7 +156,7 @@ print(x)
 <p>The dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24 hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
 <p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 65 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 65 bytes</h1>
 <pre><code>print _^:=Print@&quot;24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -169,7 +179,7 @@ print(x)
 <hr />
 <p>Probably against the spirit of the rules, but line 1 could simply be <code>print:=Print@&quot;24 hours&quot;</code> (-3 bytes): print <code>24 hours</code> when <code>print</code> is encountered.</p>
 </div>
-<div id="pu9" class="pu"><h1>Google Sheets, 77 bytes</h1>
+<div id="pu10" class="pu"><h1>Google Sheets, 77 bytes</h1>
 <pre><code>=let(print,lambda(_,&quot;24 hours&quot;),_,
 day = &quot;Monday&quot;&amp;
 x = day.length,
@@ -177,7 +187,7 @@ print(x)
 )
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 68 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 68 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>def print a;puts&quot;24 hours&quot;end
 day = &quot;Monday&quot;
@@ -195,7 +205,7 @@ print(x)
 </code></pre>
 <p><a href="https://tio.run/##KypNqvz/P7ikKDMvXS85J7G4OD61LDGnOiU1TSEnNS@9JMNaychEISO/tKhYKTUvpZYrJbFSwVZByTc/D8hS4qoAcoAMPYhirgKgQSUaFZr//wMA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>filter print{'24 hours'}
 $day = &quot;Monday&quot;
@@ -205,7 +215,7 @@ print($x)
 <p><a href="https://tio.run/##K8gvTy0qzkjNyfn/Py0zpyS1SKGgKDOvpFrdyEQhI7@0qFi9lkslJbFSwVZByTc/D8hS4lKpAPJAgno5qXnpJRlcYC0aKhWa//8DAA" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>Straightforward: 'filter' is basically the same as 'function' (but with automatic pipeline processing, which is not the point here), but has only 6 instead of 8 characters. It will ignore any arguments and just return the static string '24 hours'.</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 60 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 60 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>day.length=&quot;24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -214,7 +224,7 @@ print(x)
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN21SEiv1clLz0ksybJWMTBQy8kuLipW4gKIKtgpKvvl5QJYSVwWQg1DIVVCUmVeiUaEJMQNqFMxIAA" rel="noreferrer">Attempt This Online!</a></p>
 <p><code>.</code> is just a part of variable name in R.</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>126</s> 124 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>126</s> 124 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>use MONKEY-TYPING;augment class Str {method length {&quot;24 hours&quot;}};my \day:=my \x:=$;
 day = &quot;Monday&quot;;
 x = day.length;
@@ -222,7 +232,7 @@ print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMGCpaUlaboWN2tKi1MVfP39vF0jdUMiAzz93K0TS9NzU_NKFJJzEouLFYJLihSqc1NLMvJTFHJS89JLMhSqlYxMFDLyS4uKlWprrXMrFWJSEiutbEGMCitbFWsuIFfBVkHJNz8PyFKy5qoA8oAsPYh-a66Cosy8Eo0KTYgboE6BOQkA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu14" class="pu"><h1>Uiua, 61 bytes</h1>
+<div id="pu15" class="pu"><h1>Uiua, 61 bytes</h1>
 <pre><code>print=ggg&amp;p
 day = &quot;Monday&quot;
 x = day.length
@@ -238,7 +248,7 @@ print(x)          # Call a function 'print' after calling the function 'x'.
 <p><code>x</code> has to take an array as input, so we put it on the stack. <code>x</code> has three outputs, all of which are useless, so <code>print</code> has to three values and print &quot;24 hours&quot;. We kill two birds with one stone by using &quot;24 hours&quot; as the array <code>x</code> takes. <code>print</code> is defined to pop three stack values and print a string.</p>
 <p>If you prefer, the <code>.&quot;24 hours&quot;</code> section can be moved to its own line at the start of the program, but this way is a byte shorter and as far as I can tell is perfectly allowed.</p>
 </div>
-<div id="pu15" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
+<div id="pu16" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>print=_=&gt;console.log(&quot;24 hours&quot;)
 day = &quot;Monday&quot;
 x = day.length
@@ -246,7 +256,7 @@ print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN90LijLzSmzjbe2S8_OK83NS9XLy0zWUjEwUMvJLi4qVNLlSEisVbBWUfPPzgCwlrgogB8jQy0nNSy_J4AJr16jQhBgHNRVmOgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu16" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 68 bytes</h1>
+<div id="pu17" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 68 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>class day:length=&quot;24 hours&quot;;\
 day = &quot;Monday&quot;
 x = day.length
