--- a/q/274829.html
+++ b/q/274829.html
@@ -26,16 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>005</td><td>Nekomata + e</td><td>240809T064132Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274839#274839">alephalp</a></td></tr>
-<tr d-ix="1"><td>010</td><td>Charcoal</td><td>240809T063035Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274838#274838">Neil</a></td></tr>
-<tr d-ix="2"><td>015</td><td>Retina 0.8.2</td><td>240809T062355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274837#274837">Neil</a></td></tr>
+<tr d-ix="0"><td>013</td><td>Retina 0.8.2</td><td>240809T062355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274837#274837">Neil</a></td></tr>
+<tr d-ix="1"><td>005</td><td>Nekomata + e</td><td>240809T064132Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274839#274839">alephalp</a></td></tr>
+<tr d-ix="2"><td>010</td><td>Charcoal</td><td>240809T063035Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274838#274838">Neil</a></td></tr>
 <tr d-ix="3"><td>040</td><td>Python</td><td>240809T051137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274836#274836">xnor</a></td></tr>
 <tr d-ix="4"><td>048</td><td>Python</td><td>240809T044903Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274835#274835">Albert.L</a></td></tr>
 <tr d-ix="5"><td>043</td><td>Funge98</td><td>240809T042800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274834#274834">Alt Shif</a></td></tr>
 <tr d-ix="6"><td>9375</td><td>Vyxal</td><td>240809T012419Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274831#274831">lyxal</a></td></tr>
 <tr d-ix="7"><td>028</td><td>JavaScript Node.js</td><td>240809T011815Z</td><td><a href="https://codegolf.stackexchange.com/questions/274829/is-there-mutable-aliasing-in-this-list-of-variable-references/274830#274830">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 5 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, <s>15</s> 13 bytes</h1>
+<pre><code>O`.#?
+1`(.)\1
+</code></pre>
+<p><a href="https://tio.run/##jVJBbsMgELzvK5BILVuKIvkBbZ/QB9iJDASjHhpViatc@ncHXNbZBaLmgNZmZmdgh7OdPk9qfqmHr59J1LsGNq0EpS/2NP1@n@1Su0N/lXuA/gqbSoKUMH8MO/kO7eA7@naeu714fRN/bdBViv8G6WRLb0Wlc9Z9O3qLWjeRvuAFDPse4cZjx9zKxJYEUrjN4FXxiI6B9wyHacWqON/TlhZKD0sVZPHUztfwbfjpKYyXNFzGoJWOEsHK5vMZw3ZchTmNBLLrhFcXSy/kohu6Ylpj4Zl4KKVjwGM2No0uxZUHiwudOPWunAb4dH2g45JY/q1cx9HI2NslIYRAXH5lTJkec5XJB7oVhiZHB@ZiNIUDeoprbg" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Takes input as a list of just the letters with the immutable references marked by a trailing <code>#</code> but link is to test suite that converts the test cases to this format for you. Outputs <code>0</code> for absent and <code>1</code> for present (if inconsistent larger numbers are allowed then the <code>1</code> can be removed to save two bytes). Explanation:</p>
+<pre><code>O`.#?
+</code></pre>
+<p>Sort all of the references in order, so the mutable references for <code>a</code> comes first and the immutable references for <code>g</code> comes last.</p>
+<pre><code>1`(.)\1
+</code></pre>
+<p>Check for a mutable reference followed by another reference to the same variable.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 5 bytes</h1>
 <pre><code>ĕ∏Hᵗf
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FquOTH3U0e_xcOv0tCXFScnFUOEFt1gyomO5oqOVEoEaDGLhTEMIMwksqqMAY4EFk-GCKaiChnBBQ3SV6XBphFgyqpXI9qAqTIGzUhFa0uAmpqJJozkiEYsjELZgsxnBSsNmDLksvD5FDjtUryA8mo4wJgnNK1hiyxCbSgzPpChhibdEFEGsIYruXgQrkbA1GKGCK6EgJxl4rKPHdSqa2WhuTMcS4rhi3RAe4hjRhYtliFcWwzXkssDGpKN4ihwWEbkNYTMiRJJx5QN036PahywWCylxAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -51,7 +63,7 @@
 <p><code>-e</code> checks if there is a solution.</p>
 <p>Let's take <code>[[&quot;f&quot;,0],[&quot;e&quot;,0],[&quot;e&quot;,1],[&quot;d&quot;,0]]</code> as an example. In the first step (<code>ĕ</code>), we can take out <code>[&quot;e&quot;,1]</code>, which becomes <code>&quot;e&quot;</code> after applying <code>∏H</code>. The rest of the input is <code>[[&quot;f&quot;,0],[&quot;e&quot;,0],[&quot;d&quot;,0]]</code>, which contains <code>&quot;e&quot;</code>. Therefore, the output is <code>True</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 10 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 10 bytes</h1>
 <pre><code>⊙θ›№θ↥ι№αι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxr1KjUEfBvSg1sSS1SMM5vxQoCBQILShILUpOLE7VyNTU1FGAiCfqKAB5mprW//@7OTo7urj@1y3LAQA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input as a string of letters where lowercase letters are immutable references and uppercase letters are mutable references and outputs a Charcoal boolean, i.e. <code>-</code> for present, nothing for absent. Explanation: Port of @xnor's Python answer.</p>
@@ -67,18 +79,6 @@
         α   Predefined variable uppercase alphabet
             Implicitly print
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 15 bytes</h1>
-<pre><code>O^`.#?
-1`(.)#\1
-</code></pre>
-<p><a href="https://tio.run/##jVJBDsIgELzzCpKqaZOmSR@gPsEHVE0BKfGgMVrjxb9XqGzdBYweyLbMMLPscNX98SyGed6e7j3Pq4LN6owJedPn/nm56rE2@@0j27Fhs2@rbM3q1vKybT0MzY4vV/zNZs1C0F@nGGzJki9kzPpse0uey8LTRzyBwblvuLLYIbZS/kgACdgm8KR4AEfH@4dDtHwVlG9p4xFMd0skZKFrY6v7VrR7DMMlFZVRYCW9hLPS8Xw6t@1XYk4dgvQ04clF4wsZ7waukFaXeCYWCukQcBeNTYJLcsXBwgInSv0ohwH@Xb/omCCWn5XqGBwZebsoBBeIia8MKeM2J5l4oCVXODk8MOOjSTRoKaZ4AQ" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Takes input as a list of just the letters with the mutable references marked by a trailing <code>#</code> but link is to test suite that converts the test cases to this format for you. Outputs <code>0</code> for absent and <code>1</code> for present (if inconsistent larger numbers are allowed then the <code>1</code> can be removed to save two bytes). Explanation:</p>
-<pre><code>O^`.#?
-</code></pre>
-<p>Sort all of the references in reverse order, so the mutable references for <code>g</code> comes first and the immutable references for <code>a</code> comes last.</p>
-<pre><code>1`(.)#\1
-</code></pre>
-<p>Check for a mutable reference followed by another reference to the same variable.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 40 bytes</h1>
 
